# zenith

./: .clang-format  .clang-tidy  .gitignore  flake.nix  shell.nix  wrangler.jsonc
.github/workflows/: ci.yml
docs/: readme.md  v0.1.0.md
docs/v0.1.0/: isa.md  readme.md
docs/v0.1.0/peripherals/: framebuffer.md  keyboard.md
nix/: peakrdl-html.nix  shell.nix
zenith-asm/: CMakeLists.txt  CMakePresets.json
zenith-asm/apps/zenith-asm/: CMakeLists.txt
zenith-asm/apps/zenith-asm/src/: main.cpp
zenith-asm/docs/: example.zasm  framebuffer-lines.zasm  readme.md
zenith-asm/lib/zenith-asm/: CMakeLists.txt
zenith-asm/lib/zenith-asm/include/zenith/: assembler.hpp  lexer.hpp
zenith-asm/lib/zenith-asm/src/zenith/: assembler.cpp  format.cpp  lexer.cpp
zenith-asm/tests/: CMakeLists.txt
zenith-assembler/: .gitignore  CMakeLists.txt  CMakePresets.json
zenith-assembler/apps/zenith-assembler/: CMakeLists.txt
zenith-assembler/apps/zenith-assembler/src/: main.cpp
zenith-assembler/docs/: example.zasm  readme.md
zenith-assembler/lib/zenith-assembler/: CMakeLists.txt
zenith-assembler/lib/zenith-assembler/include/zenith/: assembler.hpp  compiler.hpp  format.hpp  lexer.hpp  parser.hpp
zenith-assembler/lib/zenith-assembler/src/zenith/: assembler.cpp  compiler.cpp  format.cpp  lexer.cpp  parser.cpp
zenith-assembler/tests/: CMakeLists.txt  assembler_tests.cpp  compiler_tests.cpp  format_tests.cpp  lexer_tests.cpp  parser_tests.cpp  test_utils.hpp
zenith-compiler/: CMakeLists.txt  CMakePresets.json
zenith-compiler/apps/zenith-compiler/: CMakeLists.txt
zenith-compiler/apps/zenith-compiler/src/: main.cpp
zenith-compiler/docs/: readme.md
zenith-compiler/lib/zenith-compiler/: CMakeLists.txt
zenith-compiler/lib/zenith-compiler/include/zenith/: compiler.hpp  lexer.hpp  parser.hpp  preprocessor.hpp
zenith-compiler/lib/zenith-compiler/src/zenith/: compiler.cpp  lexer.cpp  parser.cpp  preprocessor.cpp
zenith-compiler/tests/: CMakeLists.txt  compiler_tests.cpp  lexer_tests.cpp  parser_tests.cpp  preprocessor_tests.cpp
zenith-emulator/: CMakeLists.txt  CMakePresets.json
zenith-emulator/apps/zenith-emulator/: CMakeLists.txt
zenith-emulator/apps/zenith-emulator/src/: main.cpp
zenith-emulator/docs/: readme.md
zenith-emulator/lib/zenith-emulator/: CMakeLists.txt
zenith-emulator/lib/zenith-emulator/include/zenith/: emulator.hpp
zenith-emulator/lib/zenith-emulator/include/zenith_emulator/: zenith_emulator.h  zenith_emulator.hpp  zenith_emulator_c_api.h
zenith-emulator/lib/zenith-emulator/src/: zenith_emulator.cpp  zenith_emulator_c_api.cpp
zenith-emulator/lib/zenith-emulator/src/zenith/: emulator.cpp
zenith-hardware/: .gitignore  main_tb_behav.wcfg  zenith-hardware.xpr
zenith-hardware/docs/: keyboard_mmio.md  readme.md
zenith-hardware/rdl/: keyboard.rdl  keyboard_mmio.rdl
zenith-hardware/zenith-hardware.srcs/constrs_1/new/: mimas_au_plus.xdc
zenith-hardware/zenith-hardware.srcs/sim_1/new/: arithmetic_logic_unit_tb.sv  main_tb.sv  (+3 more)
zenith-kernel/: main.c
zenith-kernel/docs/: readme.md
zenith-libc/: ascii.c  ctype.h  example.c  math.h  stdio.h  stdlib.h  string.h
zenith-libc/docs/: readme.md
zenith-pcba/: .gitignore  disconnected_io.kicad_sch  fp-lib-table  other.kicad_sch  programmer.kicad_sch  programmerrealkicad_sch.kicad_sch  sym-lib-table  todo.kicad_sch  todop.kicad_sch  untitled.kicad_sch  zenith-pcba.kicad_pcb  zenith-pcba.kicad_pro  zenith-pcba.kicad_sch
zenith-pcba/docs/: readme.md
zenith-pcba/imports/: easyeda2kicad.kicad_sym
zenith-pcba/imports/K4B4G1646E-BCNB/: 2026-07-13_05-20-03.kicad_sym  BGA96_K4B4G1_SAM.step
zenith-pcba/imports/XC7A50T-2CSG325C/: CSCSG325_AMD.step
zenith-pcba/imports/easyeda2kicad.3dshapes/: C1206_L3.2-W1.6-H1.3.wrl  CONN-TH_DIN-603.step  CONN-TH_DIN-603.wrl  CONN-TH_DS1093-01-PN60.step  CONN-TH_DS1093-01-PN60.wrl  CSPBGA-324_L15.0-W15.0-R18-C18-P0.8-TL.step  CSPBGA-324_L15.0-W15.0-R18-C18-P0.8-TL.wrl  CYSTAL-SMD_4P-L5.0-W3.2-BL.step  CYSTAL-SMD_4P-L5.0-W3.2-BL.wrl  DFN3810-9_L3.8-W1.0-P0.9.step  DFN3810-9_L3.8-W1.0-P0.9.wrl  DSUB-TH_DMR-15P-FB-WI.wrl  FBGA-676_L27.0-W27.0-R26-C26-P1.00-BL.wrl  IND-SMD_L4.0-W4.0-H3.0.wrl  QFN-8_L1.5-W1.5-H0.4-P0.50.step  QFN-8_L1.5-W1.5-H0.4-P0.50.wrl  SOT-143_L2.9-W1.3-P1.92-LS2.3-BL.step  SOT-143_L2.9-W1.3-P1.92-LS2.3-BL.wrl  SOT-23-6_L2.9-W1.6-P0.95-LS2.9-BL.step  SOT-23-6_L2.9-W1.6-P0.95-LS2.9-BL.wrl  SOT-363-6_L2.2-W1.3-P0.65-LS2.1-BL.wrl  SW-SMD_4P-L5.2-W5.2-H1.5-P3.70-LS5.4_UK-B0232XX.step  SW-SMD_4P-L5.2-W5.2-H1.5-P3.70-LS5.4_UK-B0232XX.wrl  TF-SMD_5025700893.step  TF-SMD_5025700893.wrl  TSOT-23-6_L2.9-W1.6-H1.1-LS2.8-P0.95.wrl  TSOT-26_L2.9-W1.6-P0.95-LS2.8-BL.wrl  TYPE-C-SMD_SBC-160S1A-20-S412.step
zenith-pcba/imports/easyeda2kicad.pretty/: C0402.kicad_mod  C0603.kicad_mod  C1206.kicad_mod  CONN-TH_DIN-603.kicad_mod  CONN-TH_DS1093-01-PN60.kicad_mod  CSPBGA-324_L15.0-W15.0-R18-C18-P0.8-TL.kicad_mod  CYSTAL-SMD_4P-L5.0-W3.2-BL.kicad_mod  DFN3810-9_L3.8-W1.0-P0.9.kicad_mod  DSUB-TH_DS1038-15FBNSIA74-0CC.kicad_mod  FBGA-676_L27.0-W27.0-R26-C26-P1.00-BL.kicad_mod  IND-SMD_L4.0-W4.0_SMNR4012.kicad_mod  R0402.kicad_mod  R0603.kicad_mod  SOT-143_L2.9-W1.3-P1.92-LS2.3-BL.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.9-BL.kicad_mod  SOT-363-6_L2.2-W1.3-P0.65-LS2.1-BL.kicad_mod  SW-SMD_4P-L5.2-W5.2-P3.70-LS6.4_UK-B0233XX.kicad_mod  TF-SMD_5025700893.kicad_mod  TSOT-23-6_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  TSOT-26_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  TSSOP-20_L6.5-W4.4-P0.65-LS6.4-BL.kicad_mod  TYPE-C-SMD_SBC-160S1A-20-S412.kicad_mod  UQFN-8_L1.5-W1.5-P0.50-TL.kicad_mod
zenith-pcba/zenith-pcba.pretty/: Untitled.kicad_mod
zenith-web/: .gitattributes  .gitignore  .prettierignore  .prettierrc  index.html  package.json  vite.config.ts  wrangler.jsonc
zenith-web/docs/: readme.md
zenith-web/public/: zenith-emulator.js  zenith-emulator.wasm  zenith-kernel  zenith-libc
zenith-web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
zenith-web/src/components/: zenith-emulator-provider.tsx
zenith-web/src/lib/: zenith-emulator.ts
(+15 files in other folders)
